openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acmecorp-website
  labels:
    app: acmecorp-website
spec:
  selector:
    app: acmecorp-website
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
