openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmecorp-website
  labels:
    app: acmecorp-website
spec:
  to:
    kind: Service
    name: acmecorp-website
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
